0.2 final
 * added hyperref package to latex.xml
 * switch to hyperref for PDF meta data [ 2809478 ]
 * avoiding the column separator in the completion popup

0.2 rc3
 * fixed bug in BibTeX parser
 * fixed bug in LaTeX validator
 * changed debug output format
 * the file extensions activating LaTeX or BibTeX features may now be configured (key 'LatexExtensions' in preferences.xml) [ 2818067 ]
 * warn instead of crash on '\include{file.tex}' [ 2749624 ]
 * fixed encoding issues with config files
 * tool keyboard shortcut may be configured again
 * fixed exception in bibliography style preview
 * implemented user dictionary and improved spell checking configuration [ 2792874 ]
 * removed duplicates from latex.xml [ 2869574 ]
 * implemented template support ("Save As Template" and new from template)
 * fixed serialize error when saving tools [ 2892971 ]
 * fixed DVI forward search issue [ 2884708 ]
 * improved "New LaTeX Document" dialog [ 2897797 ]
 * fixed the "Choose Master Document" dialog [ 2898996 ]
 * improved the PDF live preview [ 2839668 ]
 * fixed special-character-in-urls issue [ 2794805 ]

0.2 rc2
 * added 'pdfpages' commands
 * handling exceptions in LaTeXValidator and LaTeXOutlineGenerator ([ 2483621 ])
 * enabling triggered completion again (completion triggered at '\', '[' and '{' for LaTeX and at '@' for BibTeX)
 * removed obsolete ICompletionHandler.strip_delimiter
 * improved performance of BibTeXParser by ~20%
 * fixed/extended labels for babel language definitions ([ 2503408 ])
 * sorting choices in "New LaTeX Document" dialog ([ 2503408 ])
 * fixed annoying completion at '\\\\'
 * finished connect-outline-to-editor-feature for BibTeX outline
 * added completion of environments defined by \newenvironment and \newtheorem
 * storing relative paths in property files
 * enabling auto-save-before-build feature again ([ 2543463 ])
 * fixed \usepackage{verbatim} issue ([ 2540046 ])
 * fixed errors and exceptions in BibTeX parser
 * updated INSTALL