@@ -1112,6 +1112,8 @@ class File(object):
 	represents the reference to a file.
 	"""
 	
+	# TODO: move this to module 'platform', it's not part of the plugin base...
+	
 	@staticmethod
 	def create_from_relative_path(relative_path, working_directory):
 		"""
