@@ -20,7 +20,7 @@
 		<job mustSucceed="true" postProcessor="GenericPostProcessor">xdvi -unique -s 6 -bg white -editor gedit "$shortname.dvi"</job>
 	</tool>
 	<tool description="Process R Sweave file and create a PDF from the resulting LaTeX source" extensions=".Rnw" id="1" label="R Sweave → PDF">
-		<job mustSucceed="true" postProcessor="GenericPostProcessor">R Sweave "$shortname.Rnw"</job>
+		<job mustSucceed="true" postProcessor="GenericPostProcessor">R CMD Sweave "$shortname.Rnw"</job>
 		<job mustSucceed="true" postProcessor="RubberPostProcessor">rubber --inplace --maxerr -1 --short --force --warn all --pdf "$shortname.tex"</job>
 		<job mustSucceed="true" postProcessor="GenericPostProcessor">gnome-open "$shortname.pdf"</job>
 	</tool>
